--- a/assets/style.css
+++ b/assets/style.css
@@ -42,11 +42,10 @@ h1 {
     padding-bottom: 10px;
 }
 
-footer {
+.footer {
     text-align: center;
     background: #666666;
     color: #ffffff;
-    clear: both;
     padding: 40px 0;
     border-top: 8px solid #4aaaa5;
     margin-top:40px;
