--- a/assets/style.css
+++ b/assets/style.css
@@ -48,5 +48,8 @@ h1 {
     color: #ffffff;
     padding: 40px 0;
     border-top: 8px solid #4aaaa5;
-    margin-top:40px;
+    height: 50px;
 }
+ .content {
+     min-height: calc(100vh - 70px);
+ }
